--- a/static/styles/includes/responsive.less
+++ b/static/styles/includes/responsive.less
@@ -6,6 +6,9 @@
   .hidden-mobile {
     display: none;
   }
+  .video {
+    width: 100% !important;
+  }
   .header-nav-list li {
     margin-right: 15px;
   }
